pages responsive primera parte

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,11 @@ body header {
     padding: 1rem; }
   body header nav {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: none;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: none;
     padding: 1rem 1.5rem; }
     body header nav ul {
       list-style: none;
@@ -96,8 +98,11 @@ main {
 
 .carrousel {
   display: flex;
+  flex-direction: none;
   justify-content: center;
   align-items: center;
+  flex-wrap: none;
+  gap: none;
   margin: auto;
   margin-top: 25px;
   padding: 5px;
@@ -108,6 +113,8 @@ main {
   scroll-snap-type: x mandatory;
   box-shadow: #26394d 0px 20px 30px -10px;
   border-radius: 9px; }
+  .carrousel h4 {
+    text-align: center; }
   .carrousel img {
     width: 100%;
     object-fit: cover;
@@ -144,38 +151,7 @@ main h5 {
   font-family: "Poppins", sans-serif;
   font-size: 18px; }
 
-.card-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 5px;
-  gap: 15px; }
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  background-color: #FEFBF3;
-  border-radius: 10%; }
-
-.card img {
-  width: 150px;
-  height: 200px;
-  object-fit: contain;
-  transition: 0.3s cubic-bezier(0.55, 0.55, 0.675, 0.19); }
-
-.card a {
-  text-decoration: none;
-  color: #000000;
-  font-family: "Poppins", sans-serif; }
-
-.banner-les {
+.banner-les, .banner-gay, .banner-trans, .banner-ingles {
   background-image: url("../assets/imagenes/mujeres.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -184,54 +160,87 @@ main h5 {
   background-position: center;
   height: 400px; }
 
-.banner-gay {
-  background-image: url("../assets/imagenes/beso.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: local;
-  background-position: center;
-  height: 400px; }
+.letter-color {
+  color: #FEFBF3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: none;
+  background-color: rgba(0, 0, 0, 0.5); }
 
-.banner-trans {
-  background-image: url("../assets/imagenes/they3.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: local;
-  background-position: center;
-  height: 400px; }
-
-.banner-ingles {
-  background-image: url("../assets/imagenes/libros.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: local;
-  background-position: center;
-  height: 400px; }
-
-.card-sinopsis-1 {
+.card-container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: none;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 5px; }
+
+.card {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: none;
+  gap: 5px;
+  padding: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+  background-color: #FEFBF3;
+  border-radius: 10%;
+  background-color: rgba(66, 38, 62, 0.2); }
+
+.card img {
+  width: 150px;
+  height: 200px;
+  object-fit: contain;
+  transition: 0.3s cubic-bezier(0.55, 0.55, 0.675, 0.19); }
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: none;
+  gap: 5px; }
+  .card-content h5 {
+    font-size: 15px; }
+
+.card a {
+  text-decoration: none;
+  color: #000000;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px; }
+
+.banner-gay {
+  background-image: url("../assets/imagenes/beso.jpg"); }
+
+.banner-trans {
+  background-image: url("../assets/imagenes/they3.jpg"); }
+
+.banner-ingles {
+  background-image: url("../assets/imagenes/libros.jpg"); }
+
+.card-sinopsis-1, .card-sinopsis-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: none;
+  gap: 15px;
   padding: 10px;
   margin: auto;
-  gap: 15px;
+  margin-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 1%;
   border: #000000;
   width: 95%; }
 
 .card-sinopsis-2 {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  padding: 5px;
-  gap: 15px;
-  background-color: azure; }
+  flex-direction: row-reverse; }
 
 .cover-sinopsis {
   width: 120px;
@@ -258,7 +267,7 @@ footer .logo {
   grid-template-rows: 1fr;
   grid-template-areas: "fot1 . fot2 . fot3";
   align-items: center;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .fot-1 {
   grid-area: fot1; }
@@ -318,8 +327,11 @@ footer .logo {
 .social {
   position: relative;
   display: flex;
-  align-items: center;
+  flex-direction: none;
   justify-content: center;
+  align-items: center;
+  flex-wrap: none;
+  gap: none;
   background: #e7e7e7;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
@@ -409,7 +421,7 @@ footer .logo {
     transform: scale(1); } }
 
 @media (max-width: 1024px) {
-  .carrouser {
+  .carrousel {
     width: 80%;
     height: 200px; } }
 
@@ -446,7 +458,14 @@ footer .logo {
     padding: 0.5px; }
   .icon {
     width: 30px;
-    height: 30px; } }
+    height: 30px; }
+  .banner-les, .banner-gay, .banner-trans, .banner-ingles {
+    height: 300px;
+    padding: 4px; }
+  .card-container {
+    padding: 2px; }
+  .card {
+    margin-bottom: 5px; } }
 
 @media (max-width: 445px) {
   main h1 {
@@ -459,6 +478,14 @@ footer .logo {
     background-size: 100% 100%;
     height: 200px;
     padding: 2px; }
+  .banner-les, .banner-gay, .banner-trans, .banner-ingles {
+    background-size: 100% 100%;
+    height: 200px;
+    padding: 2px; }
+  .card-content h5 {
+    font-size: 12px; }
+  .card a {
+    font-size: 10px; }
   .grid-footer {
     display: flex;
     flex-direction: column;
@@ -468,3 +495,28 @@ footer .logo {
     font-size: 15px; }
   .list-footer a {
     font-size: 9.5px; } }
+
+@media (max-width: 320px) {
+  main h1 {
+    font-size: 35px; }
+  main h2 {
+    font-size: 12px; }
+  main h3 {
+    font-size: 17px; }
+  .banner-index {
+    background-size: 100% 100%;
+    height: 100px;
+    padding: 2px; }
+  .banner-les, .banner-gay, .banner-trans, .banner-ingles {
+    background-size: 100% 100%;
+    height: 150px;
+    padding: 2px; }
+  .grid-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly; }
+  .fot-2 a {
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px; }
+  .list-footer a {
+    font-size: 8.5px; } }
