--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -43,4 +43,14 @@
         width: 30px;
         height: 30px;
     }
+    .banner-les{
+        height: 300px;
+        padding: 4px;
+        }
+    .card-container{
+        padding: 2px;
+    }
+    .card{
+        margin-bottom: 5px;
+    }
 }
