--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,2 +1,5 @@
 $fuente-texto:'Poppins', sans-serif;
 $fuente-titulos:'Noticia Text', serif;
+$background-header:#383838;
+$background-main: #F2F2F2;
+$background-footer:#066163;
