--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 body{
     header{
-        background-color: #383838;
+        background-color: $background-header;
         width: 100%;
         height: 100%;
         padding: 2px;
@@ -9,10 +9,7 @@ body{
                 padding: 1rem;
             }
             nav{
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-                align-items: center;
+                @include flex(none, space-between, center, wrap, none);
                 padding: 1rem 1.5rem;
                 ul{
                     list-style: none;
