--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -7,37 +7,6 @@ main{
         font-size: 18px;
     }
 }
-.card-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 5px;
-    gap: 15px;
-}
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    background-color: #FEFBF3;
-    border-radius: 10%;
-}
-.card img{
-    width: 150px;
-    height: 200px;
-    object-fit: contain;
-    transition: 0.3s cubic-bezier(0.55, 0.55, 0.675, 0.19);
-}
-.card a{
-    text-decoration: none;
-    color: #000000;
-    font-family: $fuente-texto;
-}
 .banner-les{
     background-image: url("../assets/imagenes/mujeres.jpg");
     background-size: 100% 100%;
@@ -47,57 +16,71 @@ main{
     background-position: center;
     height: 400px;
 }
+.letter-color{
+    color: #FEFBF3;
+    @include flex(column, center, center, wrap, none);
+    background-color: rgba(0,0,0,0.5)
+}
+.card-container{
+    @include flex(row, space-around, none, wrap, 15px);
+    padding: 5px;
+}
+.card{
+    @include flex(column, center, center, none, 5px);
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+    transition: 0.3s;
+    background-color: #FEFBF3;
+    border-radius: 10%;
+    background-color: rgba(66, 38, 62, 0.2)
+}
+.card img{
+    width: 150px;
+    height: 200px;
+    object-fit: contain;
+    transition: 0.3s cubic-bezier(0.55, 0.55, 0.675, 0.19);
+}
+.card-content{
+    @include flex(column, center, center, none, 5px);
+        h5{
+            font-size: 15px;
+        }
+}
+.card a{
+    text-decoration: none;
+    color: #000000;
+    font-family: $fuente-texto;
+    font-size: 12px;
+}
 .banner-gay{
+    @extend .banner-les;
     background-image: url("../assets/imagenes/beso.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: local;
-    background-position: center;
-    height: 400px;
 }
 .banner-trans{
+    @extend .banner-les;
     background-image: url("../assets/imagenes/they3.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: local;
-    background-position: center;
-    height: 400px;
 }
 .banner-ingles{
+    @extend .banner-les;
     background-image: url("../assets/imagenes/libros.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: local;
-    background-position: center;
-    height: 400px;
 }
 
 // STYLE DE "SINOPSIS"
 .card-sinopsis-1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    justify-content: center;
-    align-items: center;
+    @include flex(row, center, center, none, 15px);
     padding: 10px;
     margin: auto;
-    gap: 15px;
+    margin-bottom: 10px;
     background-color: rgba(0,0,0,0.1);
     border-radius: 1%;
     border: #000000;
     width: 95%;
 }
 .card-sinopsis-2{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    padding: 5px;
-    gap: 15px;
-    background-color: azure;
+    @extend .card-sinopsis-1;
+        flex-direction: row-reverse;
 }
+
 .cover-sinopsis{
     width: 120px;
     height: 170px;
