--- a/scss/layout/_media-320.scss
+++ b/scss/layout/_media-320.scss
@@ -1,31 +1,35 @@
-// @media (max-width:320px){
-//     main{
-//         h1{
-//             font-size: 35px;
-//         }
-//         h2{
-//             font-size: 13px;
-//         }
-//     }
-//     p{
-//         font-size: 8.5px;
-//     }
-//     .cover{
-//         width: 100px;
-//         height: 150px;
-//     }
-//     section iframe{
-//         width: 100px;
-//         height: 150px;
-//     .fot-c{
-//         a{
-//             font-size: 13px;
-//         }
-        
-//     }
-//     .titulo-c{
-//         font-size: 30px;
-//     }
-//     }
-// }
-@media (max-width:320px){}
+@media (max-width:320px){
+    main{
+        h1{
+            font-size: 35px;
+        }
+        h2{
+            font-size: 12px;
+        }
+        h3{
+            font-size: 17px;
+        }
+    }
+    .banner-index{
+        background-size: 100% 100%;
+        height: 100px;
+        padding: 2px;
+    }
+    .banner-les{
+        background-size: 100% 100%;
+        height: 150px;
+        padding: 2px;
+    }
+    .grid-footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .fot-2 a{
+        font-family: 'Poppins', sans-serif;
+        font-size: 13px;
+    }
+    .list-footer a {
+        font-size: 8.5px;
+    }
+}
