--- a/scss/layout/_media-445.scss
+++ b/scss/layout/_media-445.scss
@@ -15,6 +15,19 @@
         height: 200px;
         padding: 2px;
         }
+        .banner-les{
+            background-size: 100% 100%;
+            height: 200px;
+            padding: 2px;
+        }
+    .card-content{
+        h5{
+            font-size: 12px;
+            }
+        }
+    .card a{
+        font-size: 10px;
+        }
     .grid-footer{
         display: flex;
         flex-direction: column;
