--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,10 +1,13 @@
+@mixin flex($direction, $justify, $align, $wrap, $gap){
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
+    flex-wrap: $wrap;
+    gap: $gap;
+}
 @mixin grid($columns, $rows){
     display: grid;
     grid-template-columns: $columns;
     grid-template-rows: $rows;
-}
-@mixin sec-index($area, $margin, $padding){
-    grid-area: $area;
-    margin: $margin;
-    padding: $padding;
 }
