--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,22 @@ body header {
     flex-wrap: wrap;
     gap: none;
     padding: 1rem 1.5rem; }
-    body header nav ul {
-      list-style: none;
-      display: flex;
-      gap: 2rem; }
-      body header nav ul li a {
-        text-decoration: none;
-        color: #F2F1F0;
-        font-family: "Poppins", sans-serif;
-        font-size: 18px; }
+  body header ul {
+    list-style: none;
+    display: flex;
+    gap: 2rem; }
+    body header ul li a {
+      text-decoration: none;
+      color: white;
+      font-family: "Poppins", sans-serif;
+      font-size: 18px; }
+      body header ul li a:hover {
+        font-size: 20px;
+        color: black;
+        padding: 2px;
+        background-color: whitesmoke;
+        padding: 4px;
+        border-radius: 5%; }
 
 nav #toggle, nav label {
   display: none; }
@@ -44,6 +51,8 @@ nav #toggle, nav label {
   height: 80px;
   border-radius: 50%;
   padding: 4px; }
+  .logo:hover {
+    transform: scale(1.2); }
 
 body::-webkit-scrollbar {
   width: 7px; }
@@ -131,9 +140,9 @@ main {
   filter: contrast(120%); }
 
 .cover {
-  width: 100px;
+  width: 170px;
   height: 230px;
-  padding: 1px; }
+  padding: 2px; }
 
 section::-webkit-scrollbar {
   width: 0.5px;
@@ -145,11 +154,11 @@ section::-webkit-scrollbar-thumb {
   border-radius: 20px; }
 
 main p {
-  text-align: justify; }
+  text-align: justify;
+  font-size: 16px; }
 
-main h5 {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px; }
+main h2 {
+  font-size: 25px; }
 
 .banner-les, .banner-gay, .banner-trans, .banner-ingles {
   background-image: url("../assets/imagenes/mujeres.jpg");
@@ -160,7 +169,7 @@ main h5 {
   background-position: center;
   height: 400px; }
 
-.letter-color {
+.banner-text {
   color: #FEFBF3;
   display: flex;
   flex-direction: column;
@@ -184,9 +193,10 @@ main h5 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: none;
-  gap: 5px;
+  flex-wrap: wrap;
+  gap: 10px;
   padding: 10px;
+  width: 200px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
   transition: 0.3s;
   background-color: #FEFBF3;
@@ -207,7 +217,8 @@ main h5 {
   flex-wrap: none;
   gap: 5px; }
   .card-content h5 {
-    font-size: 15px; }
+    font-size: 20px;
+    text-align: center; }
 
 .card a {
   text-decoration: none;
@@ -236,8 +247,11 @@ main h5 {
   margin-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 1%;
-  border: #000000;
   width: 95%; }
+  .card-sinopsis-1 h5, .card-sinopsis-2 h5 {
+    font-size: 22px; }
+  .card-sinopsis-1 p, .card-sinopsis-2 p {
+    font-size: 15px; }
 
 .card-sinopsis-2 {
   flex-direction: row-reverse; }
@@ -247,11 +261,33 @@ main h5 {
   height: 170px;
   padding: 5px; }
 
+button {
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  width: 45px;
+  height: 45px;
+  opacity: 0.75;
+  border: 1px solid #e7eae8;
+  border-radius: 8px;
+  cursor: pointer;
+  animation: bounce_513 1s infinite;
+  position: fixed; }
+
+@keyframes bounce_513 {
+  0%,
+  100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1); }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1); } }
+
 footer ul li {
   list-style: none; }
   footer ul li a {
     text-decoration: none;
-    color: black; }
+    color: white; }
 
 footer .logo {
   grid-area: logo;
@@ -302,7 +338,7 @@ footer .logo {
   border-radius: 2px;
   transition: all .5s;
   background: #066163;
-  border: 1px solid #3E2C41;
+  border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -318,7 +354,7 @@ footer .logo {
   text-align: center;
   transform: rotate(-90deg);
   transition: all .5s;
-  color: black;
+  color: white;
   letter-spacing: .1em; }
 
 .list-footer a:hover {
@@ -421,11 +457,24 @@ footer .logo {
     transform: scale(1); } }
 
 @media (max-width: 1024px) {
-  .carrousel {
-    width: 80%;
-    height: 200px; } }
+  main h2 {
+    font-size: 18px; }
+  main h3 {
+    font-size: 24px; }
+  main p {
+    font-size: 12px; } }
 
 @media (max-width: 768px) {
+  main h3 {
+    font-size: 18px; }
+  main h1 {
+    font-size: 50px; }
+  main h2 {
+    font-size: 16px; }
+  main h3 {
+    font-size: 21px; }
+  main p {
+    font-size: 14px; }
   nav .menu {
     width: 100%;
     height: 0;
@@ -439,22 +488,13 @@ footer .logo {
     color: #F2F1F0; }
   nav #toggle:checked ~ .menu {
     height: 100%; }
-  h1 {
-    font-size: 30px; }
-  h2 {
-    font-size: 16px; }
-  p {
-    font-size: 14px; }
   .banner-index {
     background-size: 100% 100%;
     height: 300px;
     padding: 2px; }
-  .carrousel {
-    width: 90%;
-    height: 250px; }
   .cover {
-    width: 100px;
-    height: 120px;
+    width: 115px;
+    height: 135px;
     padding: 0.5px; }
   .icon {
     width: 30px;
@@ -465,15 +505,51 @@ footer .logo {
   .card-container {
     padding: 2px; }
   .card {
-    margin-bottom: 5px; } }
+    margin-bottom: 5px; }
+  .card img {
+    width: 120px;
+    height: 180px; }
+  .card-content h5 {
+    font-size: 18px;
+    text-align: center; }
+  .card-sinopsis-1, .card-sinopsis-2, .card-sinopsis-2 {
+    font-size: 14px; } }
 
-@media (max-width: 445px) {
+@media (max-width: 738px) {
+  main h2 {
+    font-size: 16px; }
+  main h3 {
+    font-size: 18px; }
+  main h4 {
+    font-size: 16px; }
+  .card img {
+    width: 120px;
+    height: 170px; }
+  .card-sinopsis-1, .card-sinopsis-2 {
+    font-size: 8px;
+    flex-direction: column-reverse;
+    overflow: auto; }
+    .card-sinopsis-1 h5, .card-sinopsis-2 h5 {
+      font-size: 19px; }
+  .card-sinopsis-2 {
+    font-size: 8px;
+    flex-direction: column-reverse; }
+    .card-sinopsis-2 h5 {
+      font-size: 19px; }
+  .cover-sinopsis {
+    width: 90px;
+    height: 130px;
+    padding: 5px; } }
+
+@media (max-width: 448px) {
   main h1 {
     font-size: 45px; }
   main h2 {
     font-size: 15px; }
   main h3 {
-    font-size: 20px; }
+    font-size: 17px; }
+  main h5 {
+    font-size: 15px; }
   .banner-index {
     background-size: 100% 100%;
     height: 200px;
@@ -482,8 +558,14 @@ footer .logo {
     background-size: 100% 100%;
     height: 200px;
     padding: 2px; }
+  .banner-gay {
+    background-size: 100% 100%;
+    height: 200px;
+    padding: 2px; }
   .card-content h5 {
     font-size: 12px; }
+  .card-content p {
+    font-size: 10px; }
   .card a {
     font-size: 10px; }
   .grid-footer {
@@ -500,9 +582,14 @@ footer .logo {
   main h1 {
     font-size: 35px; }
   main h2 {
-    font-size: 12px; }
+    font-size: 12px;
+    padding: 2px; }
   main h3 {
-    font-size: 17px; }
+    font-size: 16px; }
+  main h5 {
+    font-size: 14px; }
+  main p {
+    padding: 4px; }
   .banner-index {
     background-size: 100% 100%;
     height: 100px;
@@ -511,6 +598,38 @@ footer .logo {
     background-size: 100% 100%;
     height: 150px;
     padding: 2px; }
+  .banner-gay {
+    background-size: 100% 100%;
+    height: 150px;
+    padding: 2px; }
+  .banner-trans {
+    background-size: 100% 100%;
+    height: 150px;
+    padding: 2px; }
+  .banner-ingles {
+    background-size: 100% 100%;
+    height: 150px;
+    padding: 2px; }
+  .card img {
+    width: 100px;
+    height: 120px; }
+  .card-sinopsis-1, .card-sinopsis-2 {
+    font-size: 8px;
+    flex-direction: column-reverse;
+    overflow: auto; }
+    .card-sinopsis-1 h5, .card-sinopsis-2 h5 {
+      font-size: 15px; }
+    .card-sinopsis-1 p, .card-sinopsis-2 p {
+      font-size: 12px; }
+  .card-sinopsis-2 {
+    font-size: 8px;
+    flex-direction: column-reverse; }
+    .card-sinopsis-2 h5 {
+      font-size: 15px; }
+    .card-sinopsis-2 p {
+      font-size: 12px; }
+  .card a {
+    font-size: 9px; }
   .grid-footer {
     display: flex;
     flex-direction: column;
