--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,7 @@ footer{
             list-style: none;
             a{
                 text-decoration: none;
-                color: black;
+                color: white;
             }
         }
     }
@@ -60,7 +60,7 @@ footer{
     border-radius: 2px;
     transition: all .5s;
     background: #066163;
-    border: 1px solid #3E2C41;
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,7 +77,7 @@ footer{
     text-align: center;
     transform: rotate(-90deg);
     transition: all .5s;
-    color: black;
+    color: white;
     letter-spacing: .1em;
 }
 .list-footer a:hover {
