--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -1,10 +1,10 @@
 main{
     p{
         text-align: justify;
+        font-size: 16px;
     }
-    h5{
-        font-family: $fuente-texto;
-        font-size: 18px;
+    h2{
+        font-size: 25px;
     }
 }
 .banner-les{
@@ -16,8 +16,8 @@ main{
     background-position: center;
     height: 400px;
 }
-.letter-color{
-    color: #FEFBF3;
+.banner-text{
+    color:#FEFBF3;
     @include flex(column, center, center, wrap, none);
     background-color: rgba(0,0,0,0.5)
 }
@@ -26,8 +26,9 @@ main{
     padding: 5px;
 }
 .card{
-    @include flex(column, center, center, none, 5px);
+    @include flex(column, center, center, wrap, 10px);
     padding: 10px;
+    width: 200px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
     transition: 0.3s;
     background-color: #FEFBF3;
@@ -43,7 +44,8 @@ main{
 .card-content{
     @include flex(column, center, center, none, 5px);
         h5{
-            font-size: 15px;
+            font-size: 20px;
+            text-align: center;
         }
 }
 .card a{
@@ -73,16 +75,46 @@ main{
     margin-bottom: 10px;
     background-color: rgba(0,0,0,0.1);
     border-radius: 1%;
-    border: #000000;
     width: 95%;
+    h5{
+        font-size: 22px;
+    }
+    p{
+        font-size: 15px;
+    }
 }
 .card-sinopsis-2{
     @extend .card-sinopsis-1;
         flex-direction: row-reverse;
 }
-
 .cover-sinopsis{
     width: 120px;
     height: 170px;
     padding: 5px;
 }
+button {
+    font-size: 20px;
+    background-color: rgba($color: #000000, $alpha: 1.0);    
+    color: white;
+    width: 45px;
+    height: 45px;
+    opacity: 0.75;
+    border: 1px solid #e7eae8;
+    border-radius: 8px;
+    cursor: pointer;
+    animation: bounce_513 1s infinite;
+    position: fixed;
+}
+
+@keyframes bounce_513 {
+    0%,
+        100% {
+        transform: translateY(-25%);
+        animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+        }
+    50% {
+        transform: translateY(0);
+        animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+}
+
