--- a/scss/layout/_media-1024.scss
+++ b/scss/layout/_media-1024.scss
@@ -1,6 +1,14 @@
 @media (max-width:1024px){
-    .carrousel{
-        width: 80%;
-        height: 200px;
+    main{
+        h2{
+            font-size: 18px;
+        }
+        h3{
+            font-size:24px;
+        }
+        p{
+            font-size: 12px;
+        }
+        
     }
 }
