--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -1,4 +1,21 @@
 @media (max-width:768px){
+    main{
+        h3{
+            font-size: 18px;
+        }
+        h1{
+            font-size: 50px;
+        }
+        h2{
+            font-size: 16px;
+        }
+        h3{
+            font-size: 21px;
+        }
+        p{
+            font-size: 14px;
+        }
+    }
     nav .menu{
         width: 100%;
         height: 0;
@@ -11,32 +28,19 @@
     }
     nav label{
         display: inline-flex;
-    color: #F2F1F0;
+        color: #F2F1F0;
     }
     nav #toggle:checked ~.menu{
         height: 100%;
-    }
-    h1{
-        font-size: 30px;
-    }
-    h2{
-        font-size: 16px;
-    }
-    p{
-        font-size: 14px;
     }
     .banner-index{
         background-size: 100% 100%;
         height: 300px;
         padding: 2px;
         }
-    .carrousel{
-        width: 90%;
-        height: 250px;
-    }
     .cover{
-    width: 100px;
-    height: 120px;
+    width: 115px;
+    height: 135px;
     padding: 0.5px;
     }
     .icon{
@@ -52,5 +56,18 @@
     }
     .card{
         margin-bottom: 5px;
+    }
+    .card img{
+        width: 120px;
+        height: 180px;
+    }
+    .card-content{
+        h5{
+            font-size: 18px;
+            text-align: center;
+        }
+    }
+    .card-sinopsis-1, .card-sinopsis-2{
+        font-size: 14px;
     }
 }
