--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -57,7 +57,7 @@ main{
 }
 .banner-trans{
     @extend .banner-les;
-    background-image: url("../assets/imagenes/they3.jpg");
+    background-image: url("../assets/imagenes/they.jpg");
 }
 .banner-ingles{
     @extend .banner-les;
