--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -12,6 +12,9 @@
         h3{
             font-size: 21px;
         }
+        h4{
+            font-size: 20px;
+        }
         p{
             font-size: 14px;
         }
@@ -38,6 +41,9 @@
         height: 300px;
         padding: 2px;
         }
+    .carrousel{
+        height: 200px;
+    }
     .cover{
     width: 115px;
     height: 135px;
