--- a/scss/layout/_media-448.scss
+++ b/scss/layout/_media-448.scss
@@ -18,6 +18,9 @@
         height: 200px;
         padding: 2px;
     }
+    .carrousel{
+        height: 170px;
+    }
     .banner-les{
         background-size: 100% 100%;
         height: 200px;
